--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js"></script>
     <script src="./js/add_task.js"></script>
 </head>
-<body>
+<body onload="includeHTML()">
     
 </body>
 </html>
