--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,11 @@
     <script src="script.js"></script>
     <script src="./js/add_task.js"></script>
 </head>
+
 <body onload="includeHTML()">
-    
+    <div id="loadingContainer">
+        <img src="./assets/image/join-logo.svg" class="logo" id="logo">
+    </div>
 </body>
+
 </html>
