--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <script src="./js/add_task.js"></script>
+    <script src="./js/storage.js"></script>
 </head>
 
 <body onload="includeHTML()">
