global Variable are loaded onload
example values are stored on remote Server; global array values are loaded when accessing index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="./js/storage.js"></script>
 </head>
 
-<body onload="includeHTML()">
+<body onload="includeHTML();init();">
     <div id="loadingContainer">
         <img src="./assets/image/join-logo.svg" class="logo" id="logo">
     </div>
