login page responsiv

--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <title>Join</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/login_style.css">
-    <link rel="stylesheet" href="css/sign_up.css">
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/login_responsiv.css">
     <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
-    <script src="script.js"></script>
-    <script src="./js/add_task.js"></script>
-    <script src="./js/storage.js"></script>
-    <script src="./js/login.js"></script>
 </head>
 
 <body onload="init()">
@@ -22,5 +18,11 @@
         <div id="login-container"></div>
         <div class="privacy-policy-container"><a href="">Privacy Policy</a><a href="">Legal notice</a></div>
     </div>
+
+
+    <script src="script.js"></script>
+    <script src="./js/add_task.js"></script>
+    <script src="./js/storage.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 </html>
