register users test

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         <img src="./assets/image/join-logo.svg" class="logo" id="logo">
         <div id="login-container"></div>
         <div class="privacy-policy-container"><a href="">Privacy Policy</a><a href="">Legal notice</a></div>
+        
     </div>
 
 
     <script src="script.js"></script>
-    <script src="./js/add_task.js"></script>
     <script src="./js/storage.js"></script>
+    <script src="./js/add_task.js"></script>
+    <script src="./js/register.js"></script>
     <script src="./js/login.js"></script>
 </body>
 </html>
