--- a/add_task.html
+++ b/add_task.html
@@ -5,16 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/add_task.css">
-    <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
+    <link rel="icon" type="image/x-icon" href="../assets/image/join-logo.svg">
     
 </head>
 
 <body onload="includeHTML(1)">
-    <div w3-include-html="assets/templates/header.html"></div>
-    <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
+    <div w3-include-html="./assets/templates/header.html"></div>
+    <div class="sidebar" w3-include-html="./assets/templates/sidebar.html"></div>
+    
     <form id="addTaskContainer">
+        <div class="add-task">
         <h1>Add Task</h1>
         <div class="task-input-container">
             <div class="task-input-cell">
@@ -75,11 +78,10 @@
         </div>
 
 
-
+    </div>
     </form>
 
     <script src="./script.js"></script>
     <script src="./js/add_task.js"></script>
     <script src="./js/storage.js"></script>
-    <script src="./js/login.js"></script>
 </body>
