--- a/add_task.html
+++ b/add_task.html
@@ -82,6 +82,7 @@
     </form>
 
     <script src="./script.js"></script>
+    <script src="summary.js"></script>
     <script src="./js/add_task.js"></script>
     <script src="./js/storage.js"></script>
 </body>
