--- a/legal-notice.html
+++ b/legal-notice.html
@@ -6,6 +6,7 @@
         <title>Privacy Policy | Join</title>
         <link rel="stylesheet" href="style.css" />
         <script src="script.js"></script>
+        <script src="summary.js"></script>
         <script src="./js/add_task.js"></script>
     </head>
 
