--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact | Join</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="summary.js"></script>
     <script src="./js/add_task.js"></script>
 </head>
 
