--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 
     <script src="script.js"></script>
+    <script src="summary.js"></script>
     <script src="./js/storage.js"></script>
     <script src="./js/register.js"></script>
     <script src="./js/login.js"></script>
