--- a/summary.html
+++ b/summary.html
@@ -16,6 +16,7 @@
         ></div>
 
         <script src="script.js"></script>
+        <script src="summary.js"></script>
         <script src="./js/storage.js"></script>
         <script src="./js/add_task.js"></script>
         <!-- <script src="./js/register.js"></script> -->
