--- a/add_task.html
+++ b/add_task.html
@@ -17,40 +17,52 @@
     <div class="sidebar" w3-include-html="./assets/templates/sidebar.html"></div>
     
     <form onsubmit="return false;" id="addTaskContainer">
-        <div class="add-task">
+        <div class="add-task" onchange="collectTaskData()">
         <h1>Add Task</h1>
         <div class="task-input-container">
             <div class="task-input-cell">
                 <div>
                     <label for="newTaskTitle">Title</label>
-                    <input type="text" id="newTaskTitle" required>
+                    <input type="text" id="newTaskTitle" placeholder="Enter a title" required>
                 </div>
 
                 <div>
                     <label for="newTaskDescription">Description</label>
-                    <textarea id="newTaskDescription"></textarea>
+                    <textarea id="newTaskDescription" placeholder="Enter a Description"></textarea>
                 </div>
 
                 <div>
-                    <label for="newTaskAssignedUser">Assigned to</label>
-                    <select id="newTaskAssignedUser">
-                    </select>
+                    <label for="newTaskAssignedUser" placeholder="Select contacts to assign">Assigned to</label>
+                    <div class="newTaskAssignedUser">
+                        <div class="dropdown-field"  onclick="changeAvailableUsersVisibility()">
+                            <input type="text" class='dropdown-field-text' value="Select contacts to assign">
+                            <img class='dropdown-field-icon' src="./assets/icons/arrow-drop.svg">
+                        </div>
+                        <div class="dropdown-content hide" id="dropDownContent">
+                            <div id="assignUserFrom">
+                                <table id="assignedUserList">
+                                    <!-- User data checkboxes will be added here dynamically -->
+                                </table>
+                                <button type="submit">Add new contact</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="task-input-cell task-input-not-first-cell">
                 <div>
                     <label for="newTaskDate">Due Date</label>
-                    <input type="date" id="newTaskDate">
+                    <input type="date" id="newTaskDate" placeholder="dd/mm/yy" pattern="\d{4}-\d{2}-\d{2}">
                 </div>
                 <div>
                     <label for="newTaskPriority">Prio</label>
                     <div id='newTaskPriority'>
-                        <button type="button" class="priority-button" value="urgent" onclick="setButtonSelected(this)">Urgent<img class='prio-icon'
+                        <button id='urgentButton' type="button" class="priority-button" value="urgent" onclick="setButtonSelected(this)">Urgent<img id='urgentIcon' class='prio-icon'
                                 src="./assets/icons/prio-urgent.svg" ></button>
-                        <button type="button" class="priority-button" value="medium" onclick="setButtonSelected(this)">Medium<img class='prio-icon'
+                        <button id='mediumButton' type="button" class="priority-button" value="medium" onclick="setButtonSelected(this)">Medium<img id='mediumIcon' class='prio-icon'
                                 src="./assets/icons/prio-medium.svg"></button>
-                        <button type="button" class="priority-button" value="low" onclick="setButtonSelected(this)">Low<img class='prio-icon'
+                        <button id='lowButton' type="button" class="priority-button" value="low" onclick="setButtonSelected(this)">Low<img id='lowIcon' class='prio-icon'
                                 src="./assets/icons/prio-low.svg"></button>
                     </div>
                 </div>
@@ -70,7 +82,8 @@
         </div>
 
         <div class="form-options">
-            <button onclick="emptyAddTaskForm()">Clear</button><button onclick="createTask()">Create Task</button>
+            <button onclick="emptyAddTaskForm()" class="form-options-button form-options-button-clear">Clear</button>
+            <button id="createTask" onclick="createTask()" class="form-options-button form-options-button-create" disabled>Create Task</button>
         </div>
 
 
