add_task updated

--- a/add_task.html
+++ b/add_task.html
@@ -69,8 +69,8 @@
                 <div>
                     <label for="newTaskCategory">Category</label>
                     <select id="newTaskCategory">
-                        <option value="technicalTask">Technical Task</option><!-- categoryId, categoryName-->
-                        <option value="userStory">User Story</option>
+                        <option class="new-task-category-option" value="technicalTask">Technical Task</option><!-- categoryId, categoryName-->
+                        <option class="new-task-category-option" value="userStory">User Story</option>
                     </select>
                 </div>
                 <div>
