added reset password page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <img src="./assets/image/join-logo.svg" class="logo" id="logo">
         <div id="login-container"></div>
         <div class="privacy-policy-container"><a href="">Privacy Policy</a><a href="">Legal notice</a></div>
-        
+        <div id="forgot-password-message" class="d-none">
+            <div class="forgot-password-message"><img src="../assets/image/SendCheck.png">
+                <span class="forgot-password-message-text">An E-Mail has been sent to you</span>
+            </div>
+        </div>
     </div>
 
 
@@ -27,4 +31,5 @@
     <script src="./js/register.js"></script>
     <script src="./js/login.js"></script>
 </body>
+
 </html>
