--- a/summary.html
+++ b/summary.html
@@ -25,14 +25,14 @@
         <div class="body">
             <div class="headline-h1">
                 <h1>Summary</h1>
-                <img src="assets/image/sidebar/Summary/blue-line.svg" alt="blue line"/>
+                <img src="assets/image/Summary/blue-line.svg" alt="blue line"/>
                 <span>Everything in a nutshell!</span>
             </div>
 
             <div class="summary-content">
                 <div class="summery-elements">
                     <div class="summery-container">
-                        <a class="tasks" href="#">
+                        <a class="tasks-top" href="#">
                             <h2>5</h2>
                             <div class="task-text">
                                 Tasks in
@@ -40,7 +40,7 @@
                                 Board
                             </div>
                         </a>
-                        <a class="tasks" href="#">
+                        <a class="tasks-top" href="#">
                             <h2>2</h2>
                             <div class="task-text">
                                 Tasks in
@@ -48,7 +48,7 @@
                                 Progress
                             </div>
                         </a>
-                        <a class="tasks" href="#">
+                        <a class="tasks-top" href="#">
                             <h2>2</h2>
                             <div class="task-text">
                                 Awaiting
@@ -57,6 +57,47 @@
                             </div>
                         </a>
                     </div>
+                    <div class="summery-container">
+                        <a class="task-middle" href="#">
+                            <div class="summary-field">
+                                <img src="assets/image/Summary/prio-height.svg" alt="">
+                                <div>
+                                    <h2>1</h2>
+                                    <div class="font-16">Urgent</div>
+                                </div>
+                            </div>
+
+                            <div>
+                                <img src="assets/image/Summary/summary-line.svg" alt="">
+                            </div>
+                            <div>
+                                <h3>October 16, 2022</h3>
+                                <div class="font-16">Upcoming Deadline</div>
+                            </div>  
+                        </a>
+                    </div>
+                    <div class="summery-container">
+                        <a class="task-bottom" href="#">
+                            <div class="summary-field">
+                                <img src="assets/image/Summary/to-do.svg" alt="">
+                                <div>
+                                    <h2>1</h2>
+                                    <div class="font-16">To-do</div>
+                                </div>
+                            </div>
+                        </a>
+                        <a class="task-bottom" href="#">
+                            <div class="summary-field">
+                                <img src="assets/image/Summary/done.svg" alt="">
+                                <div>
+                                    <h2>1</h2>
+                                    <div class="font-16">Done</div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    
+
                 </div>
                 <div class="greet-section"></div>
             </div>
