--- a/summary.html
+++ b/summary.html
@@ -32,7 +32,7 @@
             <div class="summary-content">
                 <div class="summery-elements">
                     <div class="summery-container">
-                        <a class="tasks-top" href="#">
+                        <a class="tasks-top box-left" href="#">
                             <h2>5</h2>
                             <div class="task-text">
                                 Tasks in
@@ -40,7 +40,7 @@
                                 Board
                             </div>
                         </a>
-                        <a class="tasks-top" href="#">
+                        <a class="tasks-top box-middle" href="#">
                             <h2>2</h2>
                             <div class="task-text">
                                 Tasks in
@@ -48,7 +48,7 @@
                                 Progress
                             </div>
                         </a>
-                        <a class="tasks-top" href="#">
+                        <a class="tasks-top box-right" href="#">
                             <h2>2</h2>
                             <div class="task-text">
                                 Awaiting
@@ -58,7 +58,7 @@
                         </a>
                     </div>
                     <div class="summery-container">
-                        <a class="task-middle" href="#">
+                        <a class="task-middle box-middle" href="#">
                             <div class="summary-field">
                                 <img src="assets/image/Summary/prio-height.svg" alt="">
                                 <div>
@@ -77,7 +77,7 @@
                         </a>
                     </div>
                     <div class="summery-container">
-                        <a class="task-bottom" href="#">
+                        <a class="task-bottom box-left" href="#">
                             <div class="summary-field">
                                 <img src="assets/image/Summary/to-do.svg" alt="">
                                 <div>
@@ -86,7 +86,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="task-bottom" href="#">
+                        <a class="task-bottom box-right" href="#">
                             <div class="summary-field">
                                 <img src="assets/image/Summary/done.svg" alt="">
                                 <div>
@@ -96,10 +96,14 @@
                             </div>
                         </a>
                     </div>
-                    
-
                 </div>
-                <div class="greet-section"></div>
+
+                <div class="greet-section">
+                    <div class="greeting">
+                        <span class="greeting-time">Good morning,</span>
+                        <h1 class="blue-text">Sofia Müller</h1>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
