--- a/summary.html
+++ b/summary.html
@@ -77,18 +77,20 @@
                         </a>
                     </div>
                     <div class="summery-container">
-                        <a class="task-bottom box-left" href="#">
+                        <a class="task-bottom box-left" onmouseover="hoverLeftButton()" onmouseout="hoverOffLeftButton()" href="#">
                             <div class="summary-field">
-                                <img src="assets/image/Summary/to-do.svg" alt="">
+                                <img id="button-left-hover1" src="assets/image/Summary/blue-button-summary.svg" alt="">
+                                <img id="button-left-hover2" class="task-bottom-img1" src="assets/image/Summary/pencil-1.svg" alt="">
                                 <div>
                                     <h2>1</h2>
                                     <div class="font-16">To-do</div>
                                 </div>
                             </div>
                         </a>
-                        <a class="task-bottom box-right" href="#">
+                        <a class="task-bottom box-right" onmouseover="hoverRightButton()" onmouseout="hoverOffRightButton()" href="#">
                             <div class="summary-field">
-                                <img src="assets/image/Summary/done.svg" alt="">
+                                <img id="button-right-hover1" src="assets/image/Summary/blue-button-summary.svg" alt="">
+                                <img id="button-right-hover2" class="task-bottom-img2" src="assets/image/Summary/check-icon-white.svg" alt="">
                                 <div>
                                     <h2>1</h2>
                                     <div class="font-16">Done</div>
@@ -108,3 +110,32 @@
         </div>
     </body>
 </html>
+
+
+
+
+
+
+
+
+<!-- <div class="summery-container">
+    <a class="task-bottom box-left" href="#">
+        <div class="summary-field">
+            <img src="assets/image/Summary/to-do.svg" alt="">
+            <div>
+                <h2>1</h2>
+                <div class="font-16">To-do</div>
+            </div>
+        </div>
+    </a>
+    <a class="task-bottom box-right" href="#">
+        <div class="summary-field">
+            <img src="assets/image/Summary/done.svg" alt="">
+            <div>
+                <h2>1</h2>
+                <div class="font-16">Done</div>
+            </div>
+        </div>
+    </a>
+</div>
+</div> -->
