added Icons with user incredentials

--- a/add_task.html
+++ b/add_task.html
@@ -46,6 +46,7 @@
                                 <button type="submit">Add new contact</button>
                             </div>
                         </div>
+                        <div id='assignedUserList'></div>
                     </div>
                 </div>
             </div>
