--- a/legal-notice.html
+++ b/legal-notice.html
@@ -1,23 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Privacy Policy | Join</title>
-        <link rel="stylesheet" href="style.css" />
-        <script src="script.js"></script>
-        <script src="summary.js"></script>
-        <script src="./js/add_task.js"></script>
-    </head>
 
-    <body onload="includeHTML(5)">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Legal Notice</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/privacy_policy.css">
+    <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
+    <script src="script.js"></script>
+    <script src="summary.js"></script>
+    <script src="./js/add_task.js"></script>
+</head>
 
-        <div w3-include-html="assets/templates/header.html"></div>
+<body onload="includeHTML(5)">
 
-        <div class="sidebar"w3-include-html="assets/templates/sidebar.html"></div>
+    <div w3-include-html="assets/templates/header.html"></div>
 
+    <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
 
-        <img onclick="goBack()" id="goBack" src="assets/image/sidebar/arrow-left-line.svg" alt="">
+    <div class='privacy-policy-container'>
+        <h1>Impressum</h1>
+        <p>Angaben gemäß § 5 TMG</p>
+        <p>Max Muster <br>
+            Musterweg<br>
+            12345 Musterstadt <br>
+        </p>
+        <p> <strong>Vertreten durch: </strong><br>
+            Max Muster<br>
+        </p>
+        <p><strong>Kontakt:</strong> <br>
+            Telefon: 01234-789456<br>
+            Fax: 1234-56789<br>
+            E-Mail: <a href='mailto:max@muster.de'>max@muster.de</a></br></p>
+        <p><strong>Umsatzsteuer-ID: </strong> <br>
+            Umsatzsteuer-Identifikationsnummer gemäß §27a Umsatzsteuergesetz: Musterustid.<br><br>
+            <strong>Wirtschafts-ID: </strong><br>
+            Musterwirtschaftsid<br>
+        </p>
+        <p><strong>Aufsichtsbehörde:</strong><br>
+            Musteraufsicht Musterstadt<br></p><br>
+        <p>Website Impressum erstellt durch <a href="https://www.impressum-generator.de">impressum-generator.de</a> von
+            der
+            <a href="https://www.kanzlei-hasselbach.de/" rel="nofollow">Kanzlei Hasselbach</a>
+        </p>
+    </div>
 
-    </body>
+</body>
+
 </html>
