updated summary and css

--- a/help.html
+++ b/help.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Help</title>
+    <title>Help | Join</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/help.css">
     <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
@@ -20,7 +22,7 @@
 
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
     <div class="help-container">
-        <h1>Help</h1>
+        <h1 class="break">Help</h1>
 
         <p>Welcome to the help page for Join, your guide to using our kanban project management tool. Here, we'll
             provide an overview
