--- a/legal-notice.html
+++ b/legal-notice.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Legal Notice</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Legal Notice | Join</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/privacy_policy.css">
     <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
@@ -21,7 +23,7 @@
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
 
     <div class='privacy-policy-container'>
-        <h1>Impressum</h1>
+        <h1 class="break">Impressum</h1>
         <p>Angaben gemäß § 5 TMG</p>
         <p>Max Muster <br>
             Musterweg<br>
