--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy</title>
+    <title>Privacy Policy | Join</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/privacy_policy.css">
     <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
