--- a/add_task.html
+++ b/add_task.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join</title>
+    <title>Add Task | Join</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/add_task.css">
     <link rel="icon" type="image/x-icon" href="../assets/image/join-logo.svg">
@@ -103,7 +105,7 @@
     </form>
 
     <script src="./script.js"></script>
-    <script src="summary.js"></script>
+    <!-- <script src=".js/summary.js"></script> -->
     <script src="./js/add_task.js"></script>
     <script src="./js/storage.js"></script>
 </body>
