--- a/board.html
+++ b/board.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Board | Join</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/header.css"/>
+    <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="icon" type="image/x-icon" href="../assets\image\join-logo.svg">
     <script src="script.js"></script>
-    <script src="summary.js"></script>
+    <script src=".js/summary.js"></script>
     <script src="./js/add_task.js"></script>
 </head>
 
