reset password test

--- a/reset.password.html
+++ b/reset.password.html
@@ -15,7 +15,7 @@
 
 <body>
     <img src="./assets/image/join-logo.svg" class="logo" id="logo">
-    <form id="reset-form" class="animation" action="">
+    <form id="reset-form" class="animation" onsubmit="onSubmit(event)">
         <img onclick="window.location.href='index.html'" class="reset-password-arrow arrow"
             src="../assets/image/arrow-left-line.png">
         <div class="heading-seperator">
@@ -25,7 +25,7 @@
         <span class="reset-password-info">Change your account password</span>
         <input id="reset-password-input1" class="reset-password-input" type="password" placeholder="New password">
         <input id="reset-password-input2" class="reset-password-input" type="password" placeholder="Confirm password">
-        <button class="reset-password-btn">Continue</button>
+        <button type="submit" class="reset-password-btn">Continue</button>
     </form>
     <div id="reset-password-message" class="d-none">
         <div class="reset-password-message">
@@ -33,6 +33,8 @@
         </div>
     </div>
     <script src="reset_password.js"></script>
+    <script src="script.js"></script>
+    <script src="js/storage.js"></script>
 </body>
 
 </html>
