add_task update; user log functions changed

--- a/test.html
+++ b/test.html
@@ -1,72 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-  .custom-dropdown {
-    position: relative;
-    display: inline-block;
-    width: 200px;
-  }
+  <title>Date Format Conversion</title>
+  <script>
+    function formatDate(inputDate) {
+      const parts = inputDate.split('.');
+      const day = parts[0].padStart(2, '0');
+      const month = parts[1].padStart(2, '0');
+      const year = parts[2];
+      
+      return `${day}/${month}/${year}`;
+    }
 
-  .custom-dropdown-header {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 8px;
-    font-size: 16px;
-    background-color: white;
-    cursor: pointer;
-  }
-
-  .custom-dropdown-list {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: white;
-    border: 1px solid #ccc;
-    border-top: none;
-    border-radius: 0 0 5px 5px;
-    display: none;
-  }
-
-  .custom-dropdown-item {
-    padding: 8px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-
-  .custom-dropdown-item:hover {
-    background-color: #f4f4f4;
-  }
-
-  .custom-dropdown.open .custom-dropdown-list {
-    display: block;
-  }
-</style>
+    function convertDateFormat() {
+      const inputDate = document.getElementById('dateInput').value;
+      
+      // Assuming the input format is d.m.Y
+      const formattedDate = formatDate(inputDate);
+      document.getElementById('output').textContent = formattedDate;
+    }
+  </script>
 </head>
 <body>
-
-<div class="custom-dropdown">
-  <div class="custom-dropdown-header">Select an option</div>
-  <div class="custom-dropdown-list">
-    <div class="custom-dropdown-item">Option 1</div>
-    <div class="custom-dropdown-item">Option 2</div>
-    <div class="custom-dropdown-item">Option 3</div>
-  </div>
-</div>
-
-<script>
-  document.addEventListener("click", function(event) {
-    const dropdowns = document.querySelectorAll(".custom-dropdown");
-    dropdowns.forEach(function(dropdown) {
-      if (dropdown.contains(event.target)) {
-        dropdown.classList.toggle("open");
-      } else {
-        dropdown.classList.remove("open");
-      }
-    });
-  });
-</script>
-
+  <label for="dateInput">Enter Date (d.m.Y):</label>
+  <input type="text" id="dateInput">
+  <button onclick="convertDateFormat()">Convert</button>
+  <p>Converted Date: <span id="output"></span></p>
 </body>
 </html>
