--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join</title>
+    <title>Join Login</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/login.css">
