--- a/summary.html
+++ b/summary.html
@@ -37,7 +37,7 @@
             <div class="summary-content">
                 <div class="summery-elements">
                     <div class="summery-container">
-                        <a class="tasks-top box-left" href="#">
+                        <a class="tasks-top box-left backgroundBlack" href="#">
                             <h2>5</h2>
                             <div class="task-text">
                                 Tasks in
@@ -45,7 +45,7 @@
                                 Board
                             </div>
                         </a>
-                        <a class="tasks-top box-middle" href="#">
+                        <a class="tasks-top box-middle backgroundBlack" href="#">
                             <h2>2</h2>
                             <div class="task-text">
                                 Tasks in
@@ -53,7 +53,7 @@
                                 Progress
                             </div>
                         </a>
-                        <a class="tasks-top box-right" href="#">
+                        <a class="tasks-top box-right backgroundBlack" href="#">
                             <h2>2</h2>
                             <div class="task-text">
                                 Awaiting
@@ -63,7 +63,7 @@
                         </a>
                     </div>
                     <div class="summery-container">
-                        <a class="task-middle box-middle" href="#">
+                        <a class="task-middle box-middle backgroundBlack" href="#">
                             <div class="summary-field">
                                 <img src="assets/image/Summary/prio-height.svg" alt="">
                                 <div>
@@ -82,7 +82,7 @@
                         </a>
                     </div>
                     <div class="summery-container">
-                        <a class="task-bottom box-left" onmouseover="hoverLeftButton()" onmouseout="hoverOffLeftButton()" href="#">
+                        <a class="task-bottom box-left backgroundBlack" onmouseover="hoverLeftButton()" onmouseout="hoverOffLeftButton()" href="#">
                             <div class="summary-field">
                                 <img id="button-left-hover1" src="assets/image/Summary/blue-button-summary.svg" alt="">
                                 <img id="button-left-hover2" class="task-bottom-img1" src="assets/image/Summary/pencil-1.svg" alt="">
@@ -92,7 +92,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a class="task-bottom box-right" onmouseover="hoverRightButton()" onmouseout="hoverOffRightButton()" href="#">
+                        <a class="task-bottom box-right backgroundBlack" onmouseover="hoverRightButton()" onmouseout="hoverOffRightButton()" href="#">
                             <div class="summary-field">
                                 <img id="button-right-hover1" src="assets/image/Summary/blue-button-summary.svg" alt="">
                                 <img id="button-right-hover2" class="task-bottom-img2" src="assets/image/Summary/check-icon-white.svg" alt="">
