forgot password test

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -22,6 +22,7 @@
 
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
     <div class="privacy-policy-container">
+        <img onclick="goBack()" id="goBack" src="assets/image/sidebar/arrow-left-line.svg">
         <h1 class="break">Datenschutzerklärung</h1>
         <p>Verantwortlicher im Sinne der Datenschutzgesetze, insbesondere der EU-Datenschutzgrundverordnung (DSGVO),
             ist:</p>
