--- a/reset.password.html
+++ b/reset.password.html
@@ -32,9 +32,11 @@
             <span class="reset-password-message-text">You reset your password</span>
         </div>
     </div>
-    <script src="reset_password.js"></script>
+
+
     <script src="script.js"></script>
     <script src="js/storage.js"></script>
+    <script src="js/reset_password.js"></script>
 </body>
 
 </html>
