--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <span class="forgot-password-message-text">An E-Mail has been sent to you</span>
             </div>
         </div>
+        <div class="privacy-policy-container"><a href="privacy-policy.html">Privacy Policy</a><a href="legal-notice.html">Legal notice</a></div>
     </div>
 
 
