--- a/legal-notice.html
+++ b/legal-notice.html
@@ -23,6 +23,7 @@
     <div class="sidebar" w3-include-html="assets/templates/sidebar.html"></div>
 
     <div class='privacy-policy-container'>
+        <img onclick="goBack()" id="goBack" src="assets/image/sidebar/arrow-left-line.svg" >
         <h1 class="break">Impressum</h1>
         <p>Angaben gemäß § 5 TMG</p>
         <p>Max Muster <br>
